--- a/index.html
+++ b/index.html
@@ -18,39 +18,41 @@
     </header>
 
     <main>
-        <h2>Categories</h2>
+        <div class="category_wrapper">
+            <h2>CATEGORIES</h2>
 
-        <div class="category_list_container">
-            <a href="productlist.html">
-                <div>
-                    <p>Accessories</p>
-                </div>
-            </a>
-            <a href="productlist.html">
-                <div>
-                    <p>Apparel</p>
-                </div>
-            </a>
-            <a href="productlist.html">
-                <div>
-                    <p>Footwear</p>
-                </div>
-            </a>
-            <a href="productlist.html">
-                <div>
-                    <p>Free Items</p>
-                </div>
-            </a>
-            <a href="productlist.html">
-                <div>
-                    <p>Personal Care</p>
-                </div>
-            </a>
-            <a href="productlist.html">
-                <div>
-                    <p>Sporting Goods</p>
-                </div>
-            </a>
+            <div class="category_list_container">
+                <a href="productlist.html">
+                    <div>
+                        <p>Accessories</p>
+                    </div>
+                </a>
+                <a href="productlist.html">
+                    <div>
+                        <p>Apparel</p>
+                    </div>
+                </a>
+                <a href="productlist.html">
+                    <div>
+                        <p>Footwear</p>
+                    </div>
+                </a>
+                <a href="productlist.html">
+                    <div>
+                        <p>Free Items</p>
+                    </div>
+                </a>
+                <a href="productlist.html">
+                    <div>
+                        <p>Personal Care</p>
+                    </div>
+                </a>
+                <a href="productlist.html">
+                    <div>
+                        <p>Sporting Goods</p>
+                    </div>
+                </a>
+            </div>
         </div>
     </main>
 </body>
