--- a/productlist.html
+++ b/productlist.html
@@ -22,39 +22,69 @@
 
         <div class="product_list_container">
 
-            <a href="product.html">
-                <div>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp" alt="tshirt">
-                    <p class="bold">Sahara Team India Fanwear Round Neck Jersey</p>
-                    <p>DKK 1595,-</p>
-                    <P>READ MORE</P>
-                </div>
-            </a>
-            <a href="product.html">
-                <div>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="tshirt2">
-                    <p class="bold">Blue T20 Indian Cricket Jersey</p>
-                    <p>DKK 1595,-</p>
-                    <P>READ MORE</P>
-                </div>
-            </a>
-            <a href="product.html">
-                <div>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp" alt="cardigan">
-                    <p class="bold">Mean Team India Cricket Jersey</p>
-                    <p>DKK 1595,- </p>
-                    <P>READ MORE</P>
-                </div>
-            </a>
-            <a href="product.html">
-                <div>
-                    <img src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp" alt="rygsæk">
-                    <p class="bold">Deck Navy Blue Backpack</p>
-                    <p>DKK 1595,-</p>
-                    <P>READ MORE</P>
-                </div>
-            </a>
+            <div class="product_item">
+                <a href="product.html">
+                    <div>
+                        <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp" alt="tshirt">
+                        <p class="bold">Sahara Team India Fanwear Round Neck Jersey</p>
+                        <p>DKK 1595,-</p>
+                        <P class="read_more">READ MORE</P>
+                    </div>
+                </a>
+            </div>
 
+            <div class="product_item">
+                <a href="product.html">
+                    <div>
+                        <img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="tshirt2">
+                        <div class="sale">
+                            <p class="bold">34%</p>
+                        </div>
+                        <p class="bold">Blue T20 Indian Cricket Jersey</p>
+                        <p>DKK 1595,-</p>
+                        <div class="new_price">
+                            <p>NOW DKK 1052,7</p>
+                        </div>
+                        <P class="read_more">READ MORE</P>
+                    </div>
+                </a>
+            </div>
+
+            <div class="product_item">
+                <a href="product.html">
+                    <div>
+                        <img src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp" alt="cardigan">
+                        <div class="soldout">
+                            <p class="bold">SOLD OUT</p>
+                        </div>
+                        <p class="bold">Mean Team India Cricket Jersey</p>
+                        <p>DKK 1595,- </p>
+                        <P class="read_more">READ MORE</P>
+                    </div>
+                </a>
+            </div>
+
+            <div class="product_item">
+                <a href="product.html">
+                    <div>
+                        <img src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp" alt="rygsæk">
+                        <div class="soldout">
+                            <p class="bold">SOLD OUT</p>
+                        </div>
+
+                        <div class="sale">
+                            <p class="bold">34%</p>
+                        </div>
+                        <p class="bold">Deck Navy Blue Backpack</p>
+                        <p>DKK 1595,-</p>
+                        <div class="new_price">
+                            <p>NOW DKK 1052,7</p>
+                        </div>
+
+                        <P class="read_more">READ MORE</P>
+                    </div>
+                </a>
+            </div>
         </div>
     </main>
 </body>
