--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
                 <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp" alt="tshirt">
             </div>
 
-            <div>
+            <div class="product_info">
                 <h2>Product information </h2>
 
                 <div class="model_name">
@@ -44,9 +44,9 @@
 
                 <div class="sizes">
                     <p class="bold">Sizes</p>
-                    <p>S</p>
-                    <p>M</p>
-                    <p>L</p>
+                    <span class="size">S</span>
+                    <span class="size">M</span>
+                    <span class="size">L</span>
                 </div>
 
                 <div>
