--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="./single.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -17,8 +18,9 @@
         <h1>FASHION</h1>
     </header>
 
-    <main>
-        <div class="product_container">
+    <main class="productContainer">
+
+        <!-- <div class="product_container">
 
             <div>
                 <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp" alt="tshirt">
@@ -30,6 +32,10 @@
                 <div class="model_name">
                     <p class="bold">Model name</p>
                     <p>Sahara Team India Fanwear Round Neck Jersey</p>
+                </div>
+
+                <div class="price">
+                    <p>895</p>
                 </div>
 
                 <div class="color">
@@ -54,7 +60,7 @@
                 </div>
             </div>
 
-        </div>
+        </div>  -->
     </main>
 </body>
 
