--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -14,7 +15,10 @@
 
 <body>
     <header>
-        <h1>FASHION</h1>
+        <a href="index.html">
+            <h1>FASHION</h1>
+        </a>
+
     </header>
 
     <main>
@@ -22,36 +26,7 @@
             <h2>CATEGORIES</h2>
 
             <div class="category_list_container">
-                <a href="productlist.html">
-                    <div>
-                        <p>Accessories</p>
-                    </div>
-                </a>
-                <a href="productlist.html">
-                    <div>
-                        <p>Apparel</p>
-                    </div>
-                </a>
-                <a href="productlist.html">
-                    <div>
-                        <p>Footwear</p>
-                    </div>
-                </a>
-                <a href="productlist.html">
-                    <div>
-                        <p>Free Items</p>
-                    </div>
-                </a>
-                <a href="productlist.html">
-                    <div>
-                        <p>Personal Care</p>
-                    </div>
-                </a>
-                <a href="productlist.html">
-                    <div>
-                        <p>Sporting Goods</p>
-                    </div>
-                </a>
+
             </div>
         </div>
     </main>
