--- a/product.html
+++ b/product.html
@@ -15,7 +15,9 @@
 
 <body>
     <header>
-        <h1>FASHION</h1>
+        <a href="index.html">
+            <h1>FASHION</h1>
+        </a>
     </header>
 
     <main class="productContainer">
