add filtrering med knapper

--- a/productlist.html
+++ b/productlist.html
@@ -21,7 +21,17 @@
     </header>
 
     <main>
+
         <h2>ALL</h2>
+
+        <div class="filter_container">
+            <button data-gender="ALL"> ALL </button>
+            <button data-gender="Women"> WOMENS </button>
+            <button data-gender="Men"> MENS </button>
+            <button data-gender="Unisex"> UNISEX </button>
+        </div>
+
+
 
         <div class="product_list_container">
             <!--
